# nerdtime

./: .env.example  .gitignore  AGENTS.md  AI_DRAFT_CASE_STUDY.md  CASE_STUDY.md  CODE_QUALITY.md  Cargo.toml  DEVLOG.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY_REVIEW.md  docker-compose.dev.yml  docker-compose.yml
.githooks/: post-commit
.github/workflows/: ci.yml
.opencode/skills/: nerdtime.jsonc
nerd/: Cargo.toml
nerd/src/: advisor.rs  auth.rs  config.rs  db.rs  devlog.rs  github.rs  insights.rs  main.rs  tasks.rs
nerd/src/tui/: app.rs  mod.rs  modals.rs  ui.rs  widgets.rs
nerd/src/tui/panels/: advisor.rs  dashboard.rs  devlog.rs  matrix.rs  mod.rs  stats.rs  tasks.rs
nerd/tests/: cli.rs  devlog.rs  heatmap.rs  sessions.rs  tasks.rs
nerdtime-api/: Cargo.toml  Dockerfile  Dockerfile.dev
nerdtime-api/config/: development.yaml  test.yaml
nerdtime-api/examples/: playground.rs
nerdtime-api/migration/: Cargo.toml
nerdtime-api/migration/src/: lib.rs  m20220101_000001_users.rs  m20260101_000001_sessions.rs  m20260103_000001_subscriptions.rs  m20260715_000001_session_extras.rs
nerdtime-api/src/: app.rs  lib.rs
nerdtime-api/src/controllers/: auth.rs  billing.rs  mod.rs  sync.rs
nerdtime-api/src/initializers/: mod.rs  view_engine.rs
nerdtime-api/src/mailers/: auth.rs  mod.rs
nerdtime-api/src/models/: mod.rs  sessions.rs  subscriptions.rs  users.rs
nerdtime-api/src/models/_entities/: mod.rs  prelude.rs  sessions.rs  subscriptions.rs  users.rs
nerdtime-api/src/views/: auth.rs
nerdtime-api/src/workers/: downloader.rs  mod.rs
nerdtime-api/tests/: mod.rs
nerdtime-api/tests/models/: mod.rs  users.rs
nerdtime-api/tests/requests/: auth.rs  billing.rs  mod.rs  prepare_data.rs  sessions.rs
nerdtime-core/: Cargo.toml
nerdtime-core/src/: lib.rs
nerdtime-db/: Cargo.toml
nerdtime-db/src/: advisor.rs  connection.rs  devlog.rs  git.rs  lib.rs  sessions.rs  stats.rs  tasks.rs  util.rs
nerdtime-mcp/: Cargo.toml
nerdtime-mcp/src/: main.rs  state.rs
nerdtime-mcp/src/tools/: advisor.rs  devlog.rs  mod.rs  sessions.rs  tasks.rs
nerdtime-mcp/tests/: mcp.rs
plugin/nerdtime-nvim/: Makefile
plugin/nerdtime-nvim/lua/nerdtime/: commands.lua  init.lua
plugin/nerdtime-nvim/plugin/: nerdtime.lua
plugin/nerdtime-vscode/: .vscodeignore  Makefile  package.json
plugin/nerdtime-vscode/src/: extension.ts  statusBar.ts  tracker.ts
spec/: end-to-end-testing.md  github-oauth-plan.md  mvp-launch-plan.md  nerdtime-cli-auth.md  nerdtime-devlog.md  nerdtime-github-sync.md  nerdtime-heatmap-insights.md  nerdtime-mcp-server.md  nerdtime-nvim-plugin.md  nerdtime-tasks.md  nerdtime-tui-plan.md  nerdtime-vscode-plugin.md  sponsorware-plan.md  stripe-sdk-migration-plan.md  tauri-mobile-app-plan.md
