[package]
name = "nerd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"
colored = "3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
toml = "0.8"
nerdtime-core = { path = "../nerdtime-core" }
