[package]
name = "nerd"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = "0.32"
dirs = "6"
nerdtime-db = { path = "../nerdtime-db" }
nerdtime-core = { path = "../nerdtime-core" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "3"
dialoguer = { version = "0.11", features = ["editor"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
toml = "0.8"
rpassword = "7"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
