[package]
name = "nerdtime-db"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
nerdtime-core = { path = "../nerdtime-core" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
anyhow = "1"
serde_json = "1"
